fixed flickery transitions

--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,7 @@ ion-toast {
   --background: #2b2b2b;
   --box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 0.2);
   --color: #ffffff;
+  margin-top: -60px;
 }
 
 @media (prefers-color-scheme: dark) {
